--- a/src/routes/Navigation/Navigation.styles.css
+++ b/src/routes/Navigation/Navigation.styles.css
@@ -1,14 +1,18 @@
 .header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
+  margin-bottom: 25px;
+
   height: 50px;
 
   background-color: rgb(191, 246, 246);
-
-  margin-bottom: 25px;
 }
 .nav-link {
   margin: 0 25px;
